Switch to a single CSR. Add control bits for access and countermeasures.
 On branch dev/spec-draft-5
 Changes to be committed:
	modified:   docs/crypto-ise.changelog.tex
	modified:   docs/crypto-ise.featuresets.tex
	modified:   docs/crypto-ise.state.tex

--- a/docs/crypto-ise.changelog.tex
+++ b/docs/crypto-ise.changelog.tex
@@ -1,6 +1,8 @@
 \paragraph{Draft-5}
 \begin{itemize}
-\item Add {\tt cisef} CSR and describe ISE feature sets.
+\item Add {\tt mccr} CSR and describe ISE feature sets.
+\item Use a single CSR to indicate feature sets and to control
+    access and countermeasures. Two CSRs seemed like overkill.
 \item Explicitly state order in which $\CPR$ registers are written to 
     the stack.
 \item Rename registers in state table $cprX \Rightarrow cX$.
