Add crypto GPR file and correct typo in associated uarch docs.
 On branch dev/implementation
 Changes to be committed:
	modified:   docs/ise-implementation.tex
	new file:   rtl/scarv_cop_cprs.v

--- a/docs/ise-implementation.tex
+++ b/docs/ise-implementation.tex
@@ -452,7 +452,7 @@ All signals are synchronous to \SIGREF{g\_clk}.
 \SIGNALS{
 \SIGNALI{ 4}{crd\_wen  }{Register byte write port enable}
 \SIGNALI{ 4}{crd\_addr }{Register write port address}
-\SIGNALO{32}{crd\_wdata}{Register write data}
+\SIGNALI{32}{crd\_wdata}{Register write data}
 }{
 Interface signals for the register file write port.
 All signals are synchronous to \SIGREF{g\_clk}.
